# shift-bob

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: mypy.yml  ruff.yml  tests-unit.yml
deploy/gcp/: cloudbuild.yaml
src/: config.py  main.py  models.py  shifter.py  utils.py
src/service/: oncall.py
src/store/: factory.py  rotation.py  rotation_mem.py  rotation_sql.py  sa.py  shift.py  shift_mem.py  shift_sql.py
tests/: conftest.py  test_shifter.py
tests/service/: test_oncall.py
tests/store/: test_rotation.py  test_shift.py
