[tool.poetry]
name = "bob"
version = "0.1.0"
description = "On-call rotation Slack app."
authors = ["square pants"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
slack-bolt = "^1.22.0"
pydantic = "^2.10.6"
lenses = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.6"
pre-commit = "^4.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
#strict = true
